--- a/goods.less
+++ b/goods.less
@@ -5,17 +5,38 @@
   }
   tr td {
     padding: 0;
-    input {
-      display: block;
-      width: 100%;
-      outline: 0;
-      border: none;
-      height: 40px;
-      line-height: 40px;
-      text-align: center;
-      &:focus {
-        background: #e8f9f6;
-      }
+  }
+  td.desc {
+    font-size: 12px;
+    line-height: 12px;
+    vertical-align: middle;
+  }
+  td.text-center {
+    line-height: 48px;
+  }
+  td .fa-close {
+    display: none;
+    cursor: pointer;
+  }
+  tr.danger td .fa-close {
+    display: inline;
+  }
+  img {
+    display: block;
+    height: 32px;
+    margin: 8px auto;
+  }
+  input {
+    display: block;
+    width: 100%;
+    outline: 0;
+    border: none;
+    height: 48px;
+    line-height: 48px;
+    text-align: center;
+    background: transparent;
+    &:focus {
+      background: #e8f9f6;
     }
   }
 }
