--- a/goods.less
+++ b/goods.less
@@ -21,10 +21,12 @@
   tr.danger td .fa-close {
     display: inline;
   }
-  img {
-    display: block;
-    height: 32px;
-    margin: 8px auto;
+  .sku-pic-field {
+    img {
+      display: block;
+      height: 32px;
+      margin: 8px auto;
+    }
   }
   input {
     display: block;
@@ -38,5 +40,15 @@
     &:focus {
       background: #e8f9f6;
     }
+  }
+}
+
+.sku-pic-picker {
+  img {
+    display: inline-block;
+    height: 100px;
+    margin: 10px;
+    border: solid 2px #f0f0f0;
+    cursor: pointer;
   }
 }
